third_party/rust/chromium_crates_io/vendor/toml_edit-0.22.22/tests/fixtures/invalid/inline-table/overwrite-06.stderr
TOML parse error at line 1, column 6
  |
1 | a = { b = 1, b.c = 2 }
  |      ^
dotted key `b` attempted to extend non-table type (integer)
